# realtime-crypto-elt

./: .gitignore  README.md  main.py  pyproject.toml
dbt_transform/: dbt_project.yml
dbt_transform/models/marts/: mart_crypto_summary.sql
dbt_transform/models/staging/: sources.yml  stg_raw_prices.sql
ingestion/: consumer.py
kafka/: producer.py
